src/test/ui/existential_types/declared_but_not_defined_in_scope.stderr
error: could not find defining uses
  --> $DIR/declared_but_not_defined_in_scope.rs:7:5
   |
LL |     pub existential type Boo: ::std::fmt::Debug; //~ ERROR could not find defining uses
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

