src/test/ui/existential_types/declared_but_not_defined_in_scope.rs
#![feature(existential_type)]

fn main() {}

mod boo {
    // declared in module but not defined inside of it
    pub existential type Boo: ::std::fmt::Debug; //~ ERROR could not find defining uses
}

fn bomp() -> boo::Boo {
    ""
}
